# lua-annotations

./: .gitignore  .gitmodules  404.html  AGENTS.md  README.md  annotation_parser.py  annotations.py  arguments.py  build_process.py  dir_scan.py  exceptions.py  index.html  init_project.py  lua_dict.py  lua_extension_anots.py  lua_parser.py  main.py  parser.py  parser_schemas.py  pyproject.toml  pyrightconfig.json  sitemap.xml  test_ext.py
.github/workflows/: mkdocs-publish.yml  python-publish.yml
api/: annotations.py  arguments.py  lua_dict.py  topo_sort.py
core/0usage/: index.html
core/1config/: index.html
core/2api/: index.html
default-extension/: main.py
default_extension/: index.py  lifecycle.py  main.py  manifest.py  networking.py  test.py
default_extension/lua/: Lifecycle.lua
docs/: mkdocs.yml
docs/docs/: index.md
game framework/1services/: index.html
game framework/2components/: index.html
game framework/3networking/: index.html
game framework/4annotations/: index.html
game framework/4indexes/: index.html
search/: search_index.json
src/: init_project.py  main.py  parser.py  parser_schemas.py
src/lua_annotations/: annotation_meta_parse.py  build_process.py  config.py  exceptions.py  init_project.py  main.py  parser.py  parser_schemas.py
templates/: AnnotationInit.lua  AnotInit.lua  LazyLoadIndex.lua  annotations.config.json
test/: Test.lua  conftest.py  default.project.json  parser_test.py  test_annotation_meta.py  test_annotations.py  test_config.py  test_ext.py  test_lua_dict.py  test_parser.py
test/include/: Class.lua  (+1 more)
(+30 files in other folders)
